# reidfo

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api-reference.md  copulas.md  data-contracts.md  feature-engineering.md  plotting.md  statistics.md
reidfo/: logging.py
reidfo/core/: __init__.py  data_splitting.py  dataframe_conversions.py  plot.py  preprocessing.py  validation_utils.py
reidfo/core/plot/: __init__.py  prodret.py  regimes.py  time_series.py  util.py
reidfo/feature_engineering/: feature_engineer.py  functional_dictionary.py  time_series_data.py  util.py
reidfo/feature_engineering/collector/: custom_collector.py  half_life_collector.py  windowed_collector.py
reidfo/reclu/: __init__.py  plot.py  util.py
reidfo/reclu/distance/: __init__.py  base.py  jaccard.py
reidfo/refo/: __init__.py  forecasting_model.py  forecasting_quality.py  xgboost.py
reidfo/reid/: __init__.py  abstract.py  jump_model.py  regime_stats.py
reidfo/stats/: general_statistics.py
reidfo/stats/copulas/: __init__.py  abstract.py  (+3 more)
tests/: __init__.py
tests/core/: __init__.py  data_splitting_test.py  dataframe_conversions_test.py  test_data_splitting.py  test_dataframe_conversions.py  test_logging.py  test_plot.py  test_util.py  test_validation_utils.py  validation_utils_test.py
tests/feature_engineering/: feature_engineer_test.py
tests/reclu/: plot_test.py  util_test.py
tests/refo/: forecasting_quality_test.py  xgboost_test.py
tests/reid/: abstract_test.py  jump_model_test.py  regime_stats_test.py
tests/stats/: general_statistics_test.py
(+110 files in other folders)
