[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reidfo"
version = "0.0.0"
dependencies = [
  "jumpmodels",
  "loguru",
  "matplotlib",
  "pandas",
  "statsmodels",
  "nolds"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reidfo*"]
